syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "PasswordServiceTest";

package passwordbox;

service PasswordProtoService {

  rpc CreatePassword (CreatePasswordRequest) returns (PasswordModel);
  rpc UpdatePassword (UpdatePasswordRequest) returns (PasswordModel);
  rpc DeletePassword (DeletePasswordRequest) returns (PasswordModel);
  rpc GetPasswordsBy (GetPasswordsByRequest) returns (PasswordModels);
}

message CreatePasswordRequest {
	int32 userId = 1;
	string title = 2;
	string login = 3;
	string passwordValue = 4;
	string image = 5;
	optional string commentary = 6;
}

message UpdatePasswordRequest {
	PasswordModel password = 1;
}

message DeletePasswordRequest {
	int32 id = 1;
}

message GetPasswordsByRequest {
	int32 userId = 1;
}

message PasswordModels {
	repeated PasswordModel passwords = 1;
}

message PasswordModel {
	int32 id = 1;
	int32 userId = 2;
	string title = 3;
	string login = 4;
	string passwordValue = 5;
	string image = 6;
	optional string commentary = 7;
}
